--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,1 +1,65 @@
-# Empty CSS file for your own CSS
+body {
+	background: #000000;
+	color: #F5DEB3;
+}
+
+body > div > div > div > div:nth-child(2) > div.col-md-8 > form > button {
+	background: #4682B4;
+	color: #F5DEB3;
+}
+
+body > div > div > div > div:nth-child(2) > div:nth-child(3) > div:nth-child(2) > div:nth-child(2) > button {
+	background: #4682B4;
+	color: #F5DEB3;
+}
+
+#modal-262616 {
+	color: #87CEFA;
+}
+
+#modal-613219 {
+	color: #87CEFA;
+}
+
+#modal-297530 {
+	color: #87CEFA;
+}
+
+#modal-549066{
+	color: #87CEFA;
+}
+
+body > div > div > div > ul > li:nth-child(3) > a {
+	color: #87CEFA;
+}
+
+body > div > div > div > ul > li:nth-child(1) > a {
+	color: #87CEFA;
+}
+
+body > div > div > div > ul > li:nth-child(2) > a {
+	color: #87CEFA;
+}
+
+#navbarDropdownMenuLink {
+	color: #87CEFA;
+}
+
+.blockquote-footer {
+	color: #DAA520;
+}
+
+div.col-md-4:nth-child(1) > div:nth-child(2) > div:nth-child(1) > address:nth-child(1) > strong:nth-child(1) {
+	
+	color: #FFFFFF;
+}
+
+div.col-md-4:nth-child(1) > div:nth-child(2) > div:nth-child(1) > address:nth-child(1) {
+	color: #A9A9A9;
+}
+
+form {
+    margin-left: auto;
+    margin-right:auto;
+    width: 30%;
+}
